# bazel-ex-20230324

./: BUILD.bazel  README.md  test.c  value_retriever.c  value_retriever.h
valsrc/: Makefile  valsrc.c  valsrc.h
